core.css
/* ... */
  
/* main color */
.uploadModal-2ifh8j,
.headerPlaying-j0WQBV,
.theme-dark .headerNormal-T_seeN,
.lookFilled-1Gx00P.colorBrand-3pXr91,
.topSectionPlaying-1J5E4n,
.bda-slist .bda-footer button,
.theme-dark #friends .tab-bar .tab-bar-item.tab-bar-item-primary,
.barFill-23-gu-,
#bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch.checked,
.themeDefault-24hCdX.valueChecked-m-4IJZ,
.theme-dark .topSectionNormal-2-vo2m,
.theme-dark .lookOutlined-3sRXeN.colorTransparent-1ewNp9,
.side-8zPYf6 .itemSelected-1qLhcL,
.bd-pfbtn,
.theme-dark .questionMark-CWEQZn,
.aka-1mqp34,
.option-n0icdO:hover,
.selected-mKYnfr.option-n0icdO,
.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected,
.need-help-modal.form.deprecated .header {
background: var(--mainColor) !important;
}
/* main darker */
.uploadModal-2ifh8j .footer-3mqk7D,
.theme-dark #friends .tab-bar .tab-bar-item.tab-bar-item-primary:hover:not(.selected),
.lookFilled-1Gx00P.colorBrand-3pXr91:hover {
background: var(--mainDarker) !important;
}
/* transparent */
.theme-dark .layers-3iHuyZ,
.container-2lgZY8,
.container-2lgZY8, .spacer-29U_x8,
.theme-dark .chat-3bRxxu,
.theme-dark .chat-3bRxxu form,
.theme-dark .content-yTz4x3,
.theme-dark .members-1998pB,
.theme-dark .chat-3bRxxu form,
.theme-dark .payment-xT17Mq,
.container-2Rl01u,
.theme-dark .tileMedia-1q3guD,
.theme-dark .root-26DmKJ,
.theme-dark .modal-3HD5ck,
.theme-dark .tileMedia-24cT6_,
.header-2o-2hj,
.theme-dark .headerBar-UHpsPw,
.userSettingsVoice-iwdUCU .media-engine-video,
.layer-3QrUeG,
.theme-dark .footer-2yfCgX,
.search-bar.search-bar-light .search-bar-inner,
.search-bar .search-bar-inner,
.theme-dark .activityFeed-28jde9,
.theme-dark .header-39GIC8,
.theme-dark .gameLibrary-TTDw4Y,
.theme-dark #friends,
.theme-dark .applicationStore-1pNvnv,
.uploadModal-2ifh8j .footer-3mqk7D .button,
.theme-dark .guildsError-3cFMtY,
.theme-dark .guild-1EfMGQ .guildInner-3DSoA4,
.theme-dark .messagesWrapper-3lZDfY,
.theme-dark .item-1GzJrl,
.emojiPicker-3m1S-j .scrollerWrap-PyxcLY,
.scrollerWrap-2lJEkd,
.theme-dark .noChannel-Z1DQK7,
.emojiPicker-3m1S-j .scroller-3vODG7,
.bda-dark #bda-qem,
.theme-dark .search-results-wrap .channel-separator .channel-name,
.bda-dark .emoji-picker .header .search-bar,
.bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar,
.emojiPicker-3m1S-j .header-1nkwgG,
.emojiPicker-3m1S-j .stickyHeader-1SS0JU,
.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j,
.theme-dark .guildsAdd-21_IdK {
    background: transparent !important;
}
/* medium dark */
.theme-dark .chat-3bRxxu,
.container-PNkimc,
.theme-dark .standardSidebarView-3F1I7i,
.theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6,
.theme-dark .item-1GzJrl:hover,
.theme-dark .container-2Thooq,
.container-1UB9sr,
.theme-dark .contentRegion-3nDuYy,
.theme-dark .body-SKIE6r,
.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container,
.theme-dark .sidebarRegion-VFTUkN,
.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6,
.theme-light .container-2Thooq,
.channels-Ie2l6A {
background: rgba(0,0,0,0) !important;
}
/* dark */
.theme-dark .guildsWrapper-5TJh6A,
.newsLink-38Naqi:hover,
.newsLink-38Naqi,
.contentSelectedText-3wUhMi,
.paginationItem-2lUq0s,
.theme-dark .userSettingsVoice-iwdUCU .previewOverlay-2O7_KC,
.contentSelectedVoice-1WDIBM,
.carousel-2WxMes,
.theme-dark .attachment-33OFj0,
.theme-dark .libraryFilterInput-3JzqZD,
.theme-dark .quickMessage-1yeL4E,
.theme-dark .inner-zqa7da,
.theme-dark .browseSearchInput-Jt8kg0,
.theme-dark .dockItem-2kQDqg:hover,
.theme-dark .topPill-30KHOu .item-PXvHYJ:hover:not(.itemSelected-1qLhcL),
.theme-dark .applicationTile-1Goy1W,
.theme-dark .bar-2Qqk5Z,
.theme-dark #friends .friends-table .friends-row:hover,
.container-2VW0UT,
.rowWrapperActive-2L7i9f,
.popout-3sVMXz,
.channel-2QD9_O.selected-1HYmZZ a,
.channel-2QD9_O:hover a,
.theme-dark #friends .tab-bar .tab-bar-item:hover:not(.selected),
.theme-dark .bda-slist li,
.theme-dark .quickswitcher-3JagVE,
.theme-dark .cardPrimary-1Hv-to,
.typeWindows-1za-n7,
.theme-dark #autocomplete-popout .row.selected,
.theme-dark .searchAnswer-3Dz2-q, .theme-dark .searchFilter-2ESiM3,
.theme-dark .search .search-bar,
.contentHoveredText-2D9B-x, .contentHoveredVoice-3p_NEO,
.theme-dark .menu-Sp6bN1,
.theme-dark .header-1RC2Wb,
.theme-dark .paymentPane-3bwJ6A,
.theme-dark .tier1Banner-1B_WXY,
.theme-dark .embedInner-1-fpTo,
.theme-dark .search-results-wrap .search-result .hit,
.theme-dark .search-results-wrap,
.theme-dark .body-3ND3kc,
.theme-dark .messageGroupWrapper-o-Zw7G,
.theme-dark .messagesPopoutWrap-1MQ1bW,
.theme-dark .paginator-166-09,
.theme-dark .search-results-wrap .search-header,
.theme-dark .card-7JP0BX,
.theme-dark .markup-2BOw-j code, .theme-dark .markup-2BOw-j code.inline,
.theme-dark .markup-2BOw-j pre,
.theme-dark .wrapperHover-1GktnT:hover,
.theme-dark .cardPrimaryOutline-29Ujqw,
.theme-dark .footer-1kmXd4,
.theme-dark .jumpToPresentBar-9P20AM,
.theme-dark .defaultIndicator-G3c16x,
.theme-dark .searchBar-1MOL6S,
.bda-dark #bda-qem button,
.bda-dark .emoji-picker .header .search-bar, .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar,
.theme-dark .member-3W1lQa:hover .content-OzHfo4,
.theme-dark .cardPrimaryEditable-3KtE4g,
.theme-dark .wrapper-35wsBm,
.theme-dark .headerClickable-2IVFo9, .theme-dark .headerDefault-1wrJcN,
.search-bar,
.theme-dark .member-3W1lQa.popout-open .content-OzHfo4,
.theme-dark .member-3W1lQa.popout-open:hover .content-OzHfo4 {
background: rgba(0,0,0,0/*.35*/) !important;
}
/* super dark */
.theme-dark .modal-3HD5ck,
.theme-dark .body-3iLsc4,
.theme-dark .input-2VB9rf,
.theme-dark.contextMenu-HLZMGh,
.theme-dark .gamePreview-9weYR2,
.bda-dark #bda-qem button.active,
.theme-dark .item-3T2z1R,
.theme-dark .header-ykumBX,
.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6,
.theme-dark .root-SR8cQa .note-QfFU8y textarea:focus,
.theme-dark .footer-1fjuF6 {
background: rgba(0,0,0,.65) !important;
}
/* ... */

